Fix overflow hidden bug with splash page post-relocation HEaderContainer into Art

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,7 +18,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  overflow: hidden;
+  overflow: scroll;
   max-height: 100%;
  }
  
