--- a/app/assets/stylesheets/art.scss
+++ b/app/assets/stylesheets/art.scss
@@ -1,8 +1,9 @@
 .art-box {
   position: relative;
-  height: 450px;
-  bottom: 100px;
-  margin-top: 360px;
+  height: 520px;
+  bottom: 130px;
+  margin-top: 395px;
+  margin-bottom: 15px;
 }
 
 .android {
